--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bcrypt-nodejs": "0.0.3",
     "blueimp-file-upload-expressjs": "^0.2.9",
     "body-parser": "^1.4.3",
+    "crypto-js": "^3.1.2-5",
     "ejs": "^1.0.0",
     "express": "latest",
     "express-session": "^1.6.5",
